--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -42,7 +42,7 @@ a {
 
 pre {
     font-family: monospace, "Lucida Console", Monaco;
-    background: $theme-bottom;
+    background: $theme-lowest;
     color: $term-foreground;
     padding: 1em;
     overflow-x: auto;
