--- a/src/sass/_palette.scss
+++ b/src/sass/_palette.scss
@@ -1,4 +1,4 @@
-$background: #262626;
+$background: #1c1c1c;
 $foreground: #FEFEFE;
 
 $term-background:  #262626;
